# hathor-core

./: .codecov.yml  .coveragerc_full  .dockerignore  .editorconfig  .envrc  .flake8  .gitignore  .gitlab-ci.yml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  DEBUG.md  Dockerfile  Dockerfile.github  Dockerfile.github-pypy  Dockerfile.pypy  EVENT_QUEUE.md  INSTALL.md  LICENSE.txt  MANIFEST.in  Makefile  PLAN_NC_RUN_SEPARATE_PROCESS.md  Pipfile  README.md  REUSE.toml  SANDBOX_USAGE_GUIDE.md  SECURITY.md  TODOS.md  _render_md_to_pdf.py  codecov.yml  debug_events.py  demo.sh  entrypoint.sh  fake_main_p2p.py  fake_p2p_manager.py  flake.nix  gabriel.py  gen_peer_id.py  generate_wallet.py  hathor-cli  (+15 more)
hathor-ct-crypto/: Cargo.toml  Makefile  SHIELDED-OUTPUTS-CLIENT-GUIDE.md  build.rs
hathor-ct-crypto/benches/: bench_pedersen.rs  bench_rangeproof.rs  bench_surjection.rs
hathor-ct-crypto/examples/: wallet_scan_native.rs
hathor-ct-crypto/node-tests/: .gitignore  index.d.ts  package.json
hathor-ct-crypto/npm/: package-lock.json  package.json  tsconfig.json
hathor-ct-crypto/npm/lib/: index.d.ts  index.d.ts.map  index.js  index.js.map  native.d.ts  native.d.ts.map  native.js  native.js.map
hathor-ct-crypto/npm/src/: index.ts  native.ts
hathor-ct-crypto/src/: balance.rs  ecdh.rs  error.rs  ffi.rs  generators.rs  hathor_ct_crypto.udl  lib.rs  napi_bindings.rs  pedersen.rs  rangeproof.rs  surjection.rs  uniffi_bindings.rs
hathor-ct-crypto/swift-bindings/: hathor_ct_crypto.swift  hathor_ct_cryptoFFI.h  hathor_ct_cryptoFFI.modulemap
hathorlib/: .codecov.yml  .gitignore  .travis.yml  LICENSE.txt  Makefile  README.md  RELEASING.md  pyproject.toml  setup.cfg
hathorlib/hathorlib/: __init__.py  base_transaction.py  block.py  checkpoint.py  client.py  daa.py  decimal_places.py  exceptions.py  scripts.py  token_amount.py  token_amount_version.py  token_creation_tx.py  token_info.py  transaction.py  tx_version.py  types.py  utils.py  version.py  vertex_parser.py
hathorlib/hathorlib/cert/: ca.crt  ca.key
hathorlib/hathorlib/conf/: __init__.py  feature_setting.py  fee_policy.py  get_settings.py  localnet.yml  mainnet.py  mainnet.yml  nano_testnet.yml  settings.py  testnet.py  testnet.yml  unittests.yml  utils.py
hathorlib/hathorlib/consensus/: consensus_settings.py
hathorlib/hathorlib/feature_activation/: settings.py
hathorlib/hathorlib/headers/: __init__.py  base.py  deprecated_nano_header.py  fee_header.py  mint_melt_header.py  nano_header.py  shielded_outputs_header.py  types.py  unshield_balance_header.py
hathorlib/hathorlib/nanocontracts/: __init__.py  allowed_imports.py  balance_rules.py  blueprint.py  blueprint_env.py  blueprint_exec.py  blueprint_service.py  blueprint_syntax_validation.py  catalog.py  clock.py  context.py  contract_accessor.py  cpython_executor.py  custom_builtins.py  exception.py  faux_immutable.py  initialize_method_accessor.py  metered_exec.py  method.py  nano_runtime_version.py  nano_settings.py  nanocontract.py  nc_exec_logs.py  nc_types.py  on_chain_blueprint.py  proxy_accessor.py  rng.py  storage_version.py  tx_storage_protocol.py  tx_storage_proxy.py  types.py  utils.py  verification.py  versions.py  vertex_data.py
hathorlib/hathorlib/scripts/: __init__.py  base_script.py  construct.py  data_script.py  execute.py  hathor_script.py  multi_sig.py  nano_contract_match_values.py  opcode.py  p2pkh.py  script_context.py
hathorlib/hathorlib/serialization/: __init__.py  bytes_deserializer.py  bytes_serializer.py  consts.py  deserializer.py  exceptions.py  serializer.py  types.py
hathorlib/hathorlib/simulator/: __init__.py  builder.py  checksig.py  in_memory_storage.py  proxy.py  simulator.py  snapshot.py
hathorlib/hathorlib/transaction/: __init__.py  shielded_tx_output.py
hathorlib/hathorlib/utils/: __init__.py  address.py  dict.py  json.py  leb128.py  pydantic.py  token_validation.py  typing.py  yaml.py
hathorlib/hathorlib/vertex_parser/: __init__.py  _headers.py  _mint_melt_header.py  _shielded_outputs_header.py  _shielded_tx_output.py  _unshield_balance_header.py
hathorlib/tests/: __init__.py  test_address_utils.py  test_basic.py  test_blueprint_syntax_validation.py  test_client.py  test_conf_utils.py  test_custom_builtins.py  test_daa.py  test_data_script.py  test_deprecated.py  test_faux_immutable.py  test_global_address_balance.py  test_leb128.py  test_nanocontract.py  test_nc_address_type.py  test_nc_types.py  test_nc_utils.py  test_nc_verify_ecdsa.py  test_nft.py  test_on_chain_blueprint.py  test_pydantic_utils.py  test_rng.py  test_shielded_headers.py  test_token_fees.py  test_token_validation.py  test_util.py  test_utils_init.py
hathorlib/tests/simulator/: blueprints.py  test_simulator_basic.py  test_simulator_blocks.py  test_simulator_events.py  test_simulator_proxy.py  test_simulator_snapshot.py  test_simulator_time.py  test_simulator_tokens.py
hathorlib/tests/utils_modules/: test_yaml.py
htr-rs/: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md  SHIELDED-OUTPUTS-CLIENT-GUIDE.md  justfile
htr-rs/.config/: nextest.toml
htr-rs/crates/hathor-ct-crypto/: Cargo.toml  hathor_ct_crypto.pyi  pyproject.toml
htr-rs/crates/hathor-next/: Cargo.toml
htr-rs/crates/hathor-next-py/: Cargo.toml  htr_next.pyi  pyproject.toml
htr-rs/crates/htr-core/: Cargo.toml
htr-rs/crates/htr-core-py/: Cargo.toml  htr_core.pyi  pyproject.toml
htr-rs/crates/htr-lib/: Cargo.toml  htr_lib.pyi  pyproject.toml
htr-rs/crates/htr-lib-napi/: .gitignore  .npmrc  Cargo.toml  PUBLISHING.md  README.md  apply-operators.cjs  apply-operators.d.cts  browser-wrapper.mjs  build.rs  package-lock.json  package.json  wrapper.d.ts  wrapper.js
htr-rs/crates/htr-lib-node/: Cargo.toml
htr-rs/crates/htr-lib-py/: Cargo.toml  htr_lib.pyi  pyproject.toml
poc-bppp-benchmark/hathor-bppp/: Cargo.toml  Makefile  pyproject.toml
poc-bppp-benchmark/hathor-bppp/src/: lib.rs
poc-grin-bp-benchmark/hathor-grin-bp/: Cargo.toml  pyproject.toml
poc-grin-bp-benchmark/hathor-grin-bp/src/: lib.rs
tps_benchmarking/benchmarks/engine/: README.md  pyproject.toml
(+2457 files in other folders)
