# Copyright 2021 Hathor Labs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "hathor"
version = "0.55.0"
description = "Hathor Network full-node"
authors = ["Hathor Team <contact@hathor.network>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://hathor.network/"
repository = "https://github.com/HathorNetwork/hathor-core/"
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Private :: Do Not Upload",
]
exclude = ["tests", "tests.*"]

[tool.poetry.scripts]
hathor-cli = 'hathor.cli.main:main'

[tool.poetry.dev-dependencies]
flake8 = "~6.0.0"
isort = {version = "~5.10.1", extras = ["colors"]}
mypy = {version = "^1.4.1", markers = "implementation_name == 'cpython'"}
mypy-zope = {version = "^1.0.0", markers = "implementation_name == 'cpython'"}
pytest = "~7.2.0"
pytest-cov = "~4.0.0"
flaky = "~3.7.0"
pytest-xdist = "~3.2.0"
yamllint = "~1.31.0"
# stubs:
types-requests = "=2.28.11.4"
types-pyopenssl = "=22.1.0.2"
types-pyyaml = "=6.0.12.9"

[tool.poetry.dependencies]
python = ">=3.9,<4"
twisted = "~22.10.0"
autobahn = "~22.7.1"
base58 = "~2.1.1"
colorama = "~0.4.6"
configargparse = "~1.5.3"
cryptography = "~38.0.3"
graphviz = "~0.20.1"
ipython = "~8.7.0"
mnemonic = "~0.20"
prometheus_client = "~0.15.0"
pyopenssl = "=22.1.0"
pycoin = "~0.92"
pywin32 = {version = "305", markers = "sys_platform == 'win32'"}
requests = "=2.28.1"
service_identity = "~21.1.0"
pexpect = "~4.8.0"
intervaltree = "~3.1.0"
structlog = "~22.3.0"
rocksdb = {git = "https://github.com/hathornetwork/python-rocksdb.git", markers = "sys_platform != 'win32'"}
aiohttp = "~3.8.3"
idna = "~3.4"
setproctitle = "^1.2.2"
sentry-sdk = {version = "^1.5.11", optional = true}
structlog-sentry = {version = "^1.4.0", optional = true}
hathorlib = "0.3.0"
pydantic = "~1.10.11"
pyyaml = "^6.0.1"

[tool.poetry.extras]
sentry = ["sentry-sdk", "structlog-sentry"]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "hathor,tests"
line_length = 119
multi_line_output = 3

[tool.mypy]
pretty = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
show_error_codes = true
show_error_context = true
plugins = [
    "pydantic.mypy",
    "mypy_zope:plugin"
]

# these are modules which we don't have type stubs for
[[tool.mypy.overrides]]
module = [
    'IPython',
    '_hashlib',
    'autobahn.*',
    'colorama',
    'configargparse',
    'graphviz',
    'intervaltree.*',
    'prometheus_client',
    'pudb.*',
    'pycoin.*',
    'pympler',
    'rocksdb',
    'sentry_sdk',
    'setproctitle',
    'sortedcontainers',
    'structlog_sentry',
    'structlog_sentry',
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "slow",
]

[build-system]
requires = ["poetry-core >= 1.3.2", "cython < 0.30"]
build-backend = "poetry.core.masonry.api"
