# Copyright 2021 Hathor Labs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "hathor"
version = "0.63.1"
description = "Hathor Network full-node"
readme = "README.md"
authors = [
    {name = "Hathor Team", email = "contact@hathor.network"},
]
license = {text = "Apache-2.0"}
requires-python = "<4,>=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Private :: Do Not Upload",
]
dependencies = [
    "twisted~=24.7.0",
    "autobahn~=24.4.2",
    "base58~=2.1.1",
    "colorama~=0.4.6",
    "configargparse~=1.5.3",
    "cryptography~=42.0.5",
    "graphviz~=0.20.1",
    "ipython[kernel]~=8.7.0",
    "mnemonic~=0.20",
    "prometheus-client~=0.15.0",
    "pyopenssl==24.2.1",
    "pycoin~=0.92.20230326",
    "requests==2.32.3",
    "service-identity~=21.1.0",
    "pexpect~=4.8.0",
    "intervaltree~=3.1.0",
    "structlog~=22.3.0",
    "rocksdb @ git+https://github.com/hathornetwork/python-rocksdb.git@force_ci/test-1",
    "aiohttp~=3.10.3",
    "idna~=3.4",
    "setproctitle<2.0.0,>=1.3.3",
    "hathorlib<1.0.0,>=0.7.0",
    "pydantic~=1.10.17",
    "pyyaml<7.0.0,>=6.0.1",
    "typing-extensions~=4.12.2",
    "python-healthchecklib<1.0.0,>=0.1.0",
]

[dependency-groups]
dev = [
    "flake8~=7.1.1",
    "isort[colors]~=5.13.2",
    "mypy<2.0.0,>=1.10.1; implementation_name == \"cpython\"",
    "mypy-zope<2.0.0,>=1.0.5; implementation_name == \"cpython\"",
    "pytest~=8.3.2",
    "pytest-cov~=5.0.0",
    "flaky~=3.8.1",
    "pytest-xdist~=3.6.1",
    "yamllint~=1.35.1",
    "types-requests==2.28.11.4",
    "types-pyopenssl==22.1.0.2",
    "types-pyyaml==6.0.12.9",
]

[project.urls]
homepage = "https://hathor.network/"
repository = "https://github.com/HathorNetwork/hathor-core/"

[project.optional-dependencies]
sentry = [
    "sentry-sdk<2.0.0,>=1.5.11",
    "structlog-sentry<2.0.0,>=1.4.0",
]

[project.scripts]
hathor-cli = "hathor.cli.main:main"

[tool.poetry]
exclude = ["tests", "tests.*"]

[tool.poetry.scripts]
hathor-cli = 'hathor.cli.main:main'

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "hathor,tests"
line_length = 119
multi_line_output = 3

[tool.mypy]
pretty = true
disallow_incomplete_defs = true
no_implicit_optional = true
extra_checks = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
show_error_codes = true
show_error_context = true
plugins = [
    "pydantic.mypy",
    "mypy_zope:plugin"
]

# these are modules which we don't have type stubs for
[[tool.mypy.overrides]]
module = [
    'IPython',
    '_hashlib',
    'autobahn.*',
    'colorama',
    'configargparse',
    'graphviz',
    'intervaltree.*',
    'prometheus_client',
    'pudb.*',
    'pycoin.*',
    'pympler',
    'rocksdb',
    'sentry_sdk',
    'setproctitle',
    'sortedcontainers',
    'structlog_sentry',
    'structlog_sentry',
    'psutil',
]
ignore_missing_imports = true

# This override enables stricter rules for some specific modules.
# Currently, we have only two options from strict-mode that are disabled, but we have to opt-in instead of opt-out
# because setting strict=true doesn't work for module-level settings.
# Reference: https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
[[tool.mypy.overrides]]
module = [
    "hathor.consensus.*",
    "hathor.feature_activation.*",
    "hathor.event.*",
    "hathor.verification.*",
    "tests.consensus.*",
    "tests.crypto.*",
    "tests.event.*",
    "tests.execution_manager.*",
    "tests.feature_activation.*",
    "tests.p2p.*",
    "tests.pubsub.*",
    "tests.simulation.*",
    "tests.unittest",
    "tests.utils",
]
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true

[tool.pydantic-mypy]
init_typed = true
init_forbid_extra = true
warn_untyped_fields = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "slow",
]

[tool.pdm.dev-dependencies]
dev = [
    "flake8~=7.1.1",
    "isort[colors]~=5.13.2",
    "mypy<2.0.0,>=1.10.1; implementation_name == \"cpython\"",
    "mypy-zope<2.0.0,>=1.0.5; implementation_name == \"cpython\"",
    "pytest~=8.3.2",
    "pytest-cov~=5.0.0",
    "flaky~=3.8.1",
    "pytest-xdist~=3.6.1",
    "yamllint~=1.35.1",
    "types-requests==2.28.11.4",
    "types-pyopenssl==22.1.0.2",
    "types-pyyaml==6.0.12.9",
]

[tool.pdm.build]
includes = []
excludes = [
    "tests",
    "tests.*",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
