[package]
name = "hathor-ct-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
secp256k1-zkp = { version = "0.11", features = ["global-context", "rand-std", "std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]
optional = true

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[features]
default = ["std"]
std = ["secp256k1-zkp/std"]
python = ["pyo3"]

[lib]
name = "hathor_ct_crypto"
crate-type = ["lib", "cdylib"]

[[bench]]
name = "bench_pedersen"
harness = false

[[bench]]
name = "bench_rangeproof"
harness = false

[[bench]]
name = "bench_surjection"
harness = false
