# SPDX-FileCopyrightText: Hathor Labs
# SPDX-License-Identifier: Apache-2.0

[project]
name = "hathorlib"
version = "0.15.0"
description = "Hathor Network base objects library"
authors = [
    {name = "Hathor Team", email = "contact@hathor.network"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<4"
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "base58>=2.1.1,<2.2.0",
    "structlog>=22.3.0,<22.4.0",
    "cryptography>=42.0.5,<42.1.0",
    "pycoin>=0.92,<0.93",
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0.1,<7.0.0",
    "htr-lib",
]

[project.optional-dependencies]
client = ["aiohttp>=3.9.3,<3.10.0"]

[project.urls]
Homepage = "https://hathor.network/"
Repository = "https://github.com/HathorNetwork/hathor-core/"

[tool.poetry]
include = ["hathorlib/py.typed"]
exclude = ["tests", "tests.*"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
base58 = "~2.1.1"
structlog = {version = "~22.3.0"}
aiohttp = {version = "~3.9.3", optional = true}
cryptography = "~42.0.5"
pycoin = "~0.92"
pydantic = "^2.0"
pyyaml = "^6.0.1"
htr-lib = {path = "../htr-rs/crates/htr-lib-py", develop = true}

[tool.poetry.dev-dependencies]
isort = {version = "~5.13.2", extras = ["colors"]}
mypy = {version = "^1.9.0", markers = "implementation_name == 'cpython'"}
pytest = "~8.1.1"
pytest-cov = "~5.0.0"
flake8 = "~7.0.0"
types-pyyaml = "=6.0.12.9"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "hathorlib,tests"
line_length = 119
multi_line_output = 3

[tool.mypy]
pretty = true
disallow_incomplete_defs = true
no_implicit_optional = true
extra_checks = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
show_error_codes = true
show_error_context = true
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = [
    "hathorlib.nanocontracts.*",
    "hathorlib.utils.*",
]
check_untyped_defs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
