[package]
name = "hathor-bppp"
version = "0.1.0"
edition = "2021"
authors = ["Hathor PoC <noreply@hathor.network>"]
license = "MIT"
description = "PyO3 bindings around distributed-lab/bp-pp for Hathor shielded-output benchmarks"
publish = false

[dependencies]
bp-pp = "0.1.1"
k256 = { version = "0.13.3", features = ["arithmetic", "serde"] }
merlin = "3.0.0"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[lib]
name = "hathor_bppp"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
