[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "hathor-bppp"
version = "0.1.0"
description = "PyO3 bindings around bp-pp for Hathor shielded-output bppp benchmarks"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hathor_bppp"
