[package]
name = "hathor-grin-bp"
version = "0.1.0"
edition = "2021"
authors = ["Hathor PoC <noreply@hathor.network>"]
license = "MIT"
description = "PyO3 bindings around grin_secp256k1zkp's original Bulletproofs on secp256k1 for Hathor shielded-output benchmarks"
publish = false

[dependencies]
grin_secp256k1zkp = "0.7"
rand = "0.8"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module"]

[lib]
name = "hathor_grin_bp"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
