# SPDX-FileCopyrightText: Hathor Labs
# SPDX-License-Identifier: Apache-2.0

[package]
name = "htr-core-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "htr_core_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
htr-core = { path = "../htr-core" }
pyo3 = { workspace = true }

[lints]
workspace = true
