[package]
name = "htr-lib-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
htr-lib = { path = "../htr-lib" }
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
secp256k1-zkp = { version = "0.11", features = ["global-context", "rand-std", "std"] }

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
