[package]
name = "htr-lib-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "htr_lib_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
htr-lib = { path = "../htr-lib" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
pyo3 = { workspace = true }

[lints]
workspace = true
