[package]
name = "htr-lib-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "htr_lib_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
htr-lib = { path = "../htr-lib" }
num-bigint = { workspace = true }
num-traits = { workspace = true }
pyo3 = { workspace = true }
secp256k1-zkp = { version = "0.11", features = ["global-context", "rand-std", "std"] }

[lints]
workspace = true
