[package]
name = "htr-lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "htr_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
blst = "0.3.16"
pyo3 = { workspace = true }

[lints]
workspace = true
