[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hathor-tps-bench"
version = "0.0.1"
description = "In-process benchmark engine for Hathor full-node transaction processing."
requires-python = ">=3.11"
# Most runtime deps come from the ambient hathor-core poetry env (pyyaml, hathor, ...).
# CSV/JSON reporting uses the stdlib; matplotlib (CP-5) is the only added dep — plots
# degrade gracefully to "skipped" if it is somehow unavailable.
dependencies = ["matplotlib>=3.5"]

[project.scripts]
hathor-tps-bench = "hathor_tps_bench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hathor_tps_bench*"]
